CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

set(THIS_APPLICATION mhdopt)

PROJECT(${THIS_APPLICATION})

set(CMAKE_VERBOSE_MAKEFILE on)

ADD_EXECUTABLE(${THIS_APPLICATION}
${CMAKE_PROJECT_DIR}main.cpp 
${CMAKE_PROJECT_DIR}EqnNS.cpp
${CMAKE_PROJECT_DIR}EqnMHD.cpp
${CMAKE_PROJECT_DIR}EqnNSAD.cpp
${CMAKE_PROJECT_DIR}EqnMHDAD.cpp
${CMAKE_PROJECT_DIR}EqnMHDCONT.cpp
${CMAKE_PROJECT_DIR}OptBcIc.cpp
${CMAKE_PROJECT_DIR}OptLoop.cpp
${CMAKE_PROJECT_DIR}OptPhysics.cpp
${CMAKE_PROJECT_DIR}OptQuantities.cpp
)


TARGET_LINK_LIBRARIES(${THIS_APPLICATION} femlib)
TARGET_LINK_LIBRARIES(${THIS_APPLICATION} ${PETSC_LIBRARIES})
TARGET_LINK_LIBRARIES(${THIS_APPLICATION} ${CMAKE_SOURCE_DIR}/ExternalLibraries/b64-1.4.2/lib/libb64.gcc47.a)

IF(MPI_FOUND)
  TARGET_LINK_LIBRARIES(${THIS_APPLICATION} ${MPI_EXTRA_LIBRARY})
ENDIF(MPI_FOUND)