CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

set(THIS_APPLICATION temper)

PROJECT(${THIS_APPLICATION})

# set(CMAKE_VERBOSE_MAKEFILE on)
# set(CMAKE_BUILD_TYPE Debug)

ADD_EXECUTABLE(${THIS_APPLICATION}
${CMAKE_PROJECT_DIR}main.cpp 
${CMAKE_PROJECT_DIR}EqnNS.cpp
${CMAKE_PROJECT_DIR}EqnT.cpp
${CMAKE_PROJECT_DIR}TempBcIc.cpp
${CMAKE_PROJECT_DIR}TempPhysics.cpp
${CMAKE_PROJECT_DIR}TempQuantities.cpp
)


TARGET_LINK_LIBRARIES(${THIS_APPLICATION} femlib)
TARGET_LINK_LIBRARIES(${THIS_APPLICATION} ${PETSC_LIBRARIES})
TARGET_LINK_LIBRARIES(${THIS_APPLICATION} ${CMAKE_SOURCE_DIR}/ExternalLibraries/b64-1.4.2/lib/libb64.gcc47.a)

IF(MPI_FOUND)
  TARGET_LINK_LIBRARIES(${THIS_APPLICATION} ${MPI_EXTRA_LIBRARY})
ENDIF(MPI_FOUND)