CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

get_filename_component(APP_FOLDER_NAME_PARENT ${CMAKE_CURRENT_LIST_DIR} NAME)


ADD_SUBDIRECTORY(ex01_function_approximation_no_eqn/)

ADD_SUBDIRECTORY(ex02_poisson_a_all_dims_dir_neu/)
ADD_SUBDIRECTORY(ex02_poisson_a_all_dims_dir_neu_multiple_domains/)

ADD_SUBDIRECTORY(ex02_poisson_a_manufactured_sol_convergence_rate_with_analytical_sol/)
ADD_SUBDIRECTORY(ex02_poisson_b_manufactured_sol_convergence_rate_from_fine_to_coarse/)
ADD_SUBDIRECTORY(ex02_poisson_c_manufactured_sol_convergence_rate_class/)

ADD_SUBDIRECTORY(ex03_poisson_plus_nonlin_advection/)
ADD_SUBDIRECTORY(ex03b_div_grad_nonlinear_diffusivity/)

ADD_SUBDIRECTORY(ex04_biharmonic_coupled_systems/)
ADD_SUBDIRECTORY(ex05_biharmonic_uncoupled_systems/)

ADD_SUBDIRECTORY(ex06a_navier_stokes/)
ADD_SUBDIRECTORY(ex06b_navier_stokes/)

ADD_SUBDIRECTORY(ex08_boussinesq/)
ADD_SUBDIRECTORY(ex08_boussinesq_amr/)

ADD_SUBDIRECTORY(ex20_time_dependent/)

