CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
  

unset(OPTCONTROL_FOLDER)
set(OPTCONTROL_FOLDER 010_OptimalControl/)

# Temperature Optimal Control
  set(OPT_APPLICATION 02_elliptic_with_given_advection)
  ADD_SUBDIRECTORY(${OPT_APPLICATION}/)
  FILE(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/applications/${OPTCONTROL_FOLDER}/${OPT_APPLICATION}/input/)
  FILE(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/applications/${OPTCONTROL_FOLDER}/${OPT_APPLICATION}/output/)
  FILE(COPY ${OPT_APPLICATION}/input/ DESTINATION ${PROJECT_BINARY_DIR}/applications/${OPTCONTROL_FOLDER}/${OPT_APPLICATION}/input/)

# FE test
  set(OPT_APPLICATION 99_fe_test)
  ADD_SUBDIRECTORY(${OPT_APPLICATION}/)
  FILE(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/applications/${OPTCONTROL_FOLDER}/${OPT_APPLICATION}/input/)
  FILE(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/applications/${OPTCONTROL_FOLDER}/${OPT_APPLICATION}/output/)
  FILE(COPY ${OPT_APPLICATION}/input/ DESTINATION ${PROJECT_BINARY_DIR}/applications/${OPTCONTROL_FOLDER}/${OPT_APPLICATION}/input/)

  
  ADD_SUBDIRECTORY(./01_boundary_control_inequality/)
  ADD_SUBDIRECTORY(./01_distributed_control_elliptic_nonlin/)
  ADD_SUBDIRECTORY(./03_nsopt/)
  ADD_SUBDIRECTORY(./04_solidopt/)
  ADD_SUBDIRECTORY(./05_mhdopt/)
  ADD_SUBDIRECTORY(./07_fractional/)
  ADD_SUBDIRECTORY(./08_bonito/)
  ADD_SUBDIRECTORY(./08_bonito2/)
  ADD_SUBDIRECTORY(./10_wg/)
  
# input mesh files for control
FILE(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/applications/${OPTCONTROL_FOLDER}/input/)
FILE(COPY           ${PROJECT_SOURCE_DIR}/applications/${OPTCONTROL_FOLDER}/input/ DESTINATION ${PROJECT_BINARY_DIR}/applications/${OPTCONTROL_FOLDER}/input/)
