CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
  

  ADD_SUBDIRECTORY(./aderezende/)
  ADD_SUBDIRECTORY(./arani/)
  ADD_SUBDIRECTORY(./ayillah/)
  ADD_SUBDIRECTORY(./fahad/)
  ADD_SUBDIRECTORY(./GayaniBalasuriya/)
  ADD_SUBDIRECTORY(./giorgiobornia/)
  ADD_SUBDIRECTORY(./hdongamm/)
  ADD_SUBDIRECTORY(./joloftin/)
  ADD_SUBDIRECTORY(./rifat/)
