CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

get_filename_component(APP_FOLDER_NAME_PARENT ${CMAKE_CURRENT_LIST_DIR} NAME)

ADD_SUBDIRECTORY(ex1/)

ADD_SUBDIRECTORY(ex2/)

ADD_SUBDIRECTORY(ex3/)

ADD_SUBDIRECTORY(ex4/)

ADD_SUBDIRECTORY(ex5/)

ADD_SUBDIRECTORY(ex6/)

ADD_SUBDIRECTORY(ex6_a/)

ADD_SUBDIRECTORY(ex6_b/)

ADD_SUBDIRECTORY(ex6_c/)

ADD_SUBDIRECTORY(ex7/)

ADD_SUBDIRECTORY(ex7_1/)

ADD_SUBDIRECTORY(ex8/)

ADD_SUBDIRECTORY(ex8_explicit/)

ADD_SUBDIRECTORY(ex9/)

ADD_SUBDIRECTORY(ex10/)

ADD_SUBDIRECTORY(ex11/)

ADD_SUBDIRECTORY(ex20/)

ADD_SUBDIRECTORY(ex21/)

ADD_SUBDIRECTORY(ex22/)
