CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(FSI_CMS_NWM)

# Build the executable
ADD_EXECUTABLE(fsicms ${CMAKE_PROJECT_DIR}main.cpp)

# Link the executable to the petsc anf femttu libs
TARGET_LINK_LIBRARIES(fsicms femus)
TARGET_LINK_LIBRARIES(fsicms ${PETSC_LIBRARIES})
TARGET_LINK_LIBRARIES(fsicms b64)
TARGET_LINK_LIBRARIES(fsicms jsoncpp)

IF(FPARSER_FOUND)
  TARGET_LINK_LIBRARIES(fsicms ${FPARSER_LIBRARY})
ENDIF(FPARSER_FOUND)

IF(MPI_FOUND)
  #TARGET_LINK_LIBRARIES(steadyns ${MPI_LIBRARY})
  #TARGET_LINK_LIBRARIES(steadyns ${MPI_CXX_LINK_FLAGS})
  TARGET_LINK_LIBRARIES(fsicms ${MPI_EXTRA_LIBRARY})
ENDIF(MPI_FOUND)