CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

get_filename_component(APP_FOLDER_NAME_PARENT ${CMAKE_CURRENT_LIST_DIR} NAME)

ADD_SUBDIRECTORY(ex1/)
ADD_SUBDIRECTORY(ex2/)

FILE(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/applications/MPM_FSI/input/)
FILE(COPY           ${PROJECT_SOURCE_DIR}/applications/MPM_FSI/input/ DESTINATION ${PROJECT_BINARY_DIR}/applications/MPM_FSI/input/)

