CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(NSProjection)

# Build the executable
ADD_EXECUTABLE(nspr ${CMAKE_PROJECT_DIR}main.cpp)

# Link the executable to the petsc anf femttu libs
TARGET_LINK_LIBRARIES(nspr femus)
TARGET_LINK_LIBRARIES(nspr ${PETSC_LIBRARIES})
TARGET_LINK_LIBRARIES(nspr b64)

IF(MPI_FOUND)
  TARGET_LINK_LIBRARIES(nspr ${MPI_EXTRA_LIBRARY})
ENDIF(MPI_FOUND)