CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

get_filename_component(APP_FOLDER_NAME_PARENT ${CMAKE_CURRENT_LIST_DIR} NAME)

IF(SLEPC_FOUND)
  ADD_SUBDIRECTORY(ex1/)
  ADD_SUBDIRECTORY(ex2/)
  ADD_SUBDIRECTORY(ex3/)
  ADD_SUBDIRECTORY(ex4/)
  ADD_SUBDIRECTORY(ex5/)
  ADD_SUBDIRECTORY(ex6/)
ENDIF(SLEPC_FOUND)
  


FILE(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/applications/NonLocal/input/)
FILE(COPY           ${PROJECT_SOURCE_DIR}/applications/NonLocal/input/ DESTINATION ${PROJECT_BINARY_DIR}/applications/NonLocal/input/)


