CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

  set(BHAGYA_FOLDER Bhagya)  
  ADD_SUBDIRECTORY(${BHAGYA_FOLDER})
  
  set(EUGENIO_FOLDER Eugenio)  
  ADD_SUBDIRECTORY(${EUGENIO_FOLDER})  
  
  set(GIACOMO_FOLDER Giacomo)  
  ADD_SUBDIRECTORY(${GIACOMO_FOLDER})
  
  set(GUOYI_FOLDER Guoyi)  
  ADD_SUBDIRECTORY(${GUOYI_FOLDER})
  
  set(SARA_FOLDER Sara)  
  ADD_SUBDIRECTORY(${SARA_FOLDER})
  
  set(THANUJA_FOLDER Thanuja)  
  ADD_SUBDIRECTORY(${THANUJA_FOLDER})
  
  set(THANUKA_FOLDER Thanuka)  
  ADD_SUBDIRECTORY(${THANUKA_FOLDER})

  set(TUTORIAL_FOLDER tutorial)  
  ADD_SUBDIRECTORY(${TUTORIAL_FOLDER})