CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

  set(MYNAME_FOLDER Bhagya)  
  ADD_SUBDIRECTORY(${MYNAME_FOLDER})
  
  set(MYNAME_FOLDER Giacomo)  
  ADD_SUBDIRECTORY(${MYNAME_FOLDER})
  
  set(MYNAME_FOLDER Guoyi)  
  ADD_SUBDIRECTORY(${MYNAME_FOLDER})
  
  set(MYNAME_FOLDER Sara)  
  ADD_SUBDIRECTORY(${MYNAME_FOLDER})
  
  set(MYNAME_FOLDER Thanuja)  
  ADD_SUBDIRECTORY(${MYNAME_FOLDER})
  
  set(MYNAME_FOLDER Thanuka)  
  ADD_SUBDIRECTORY(${MYNAME_FOLDER})
  
  set(MYNAME_FOLDER tutorial)  
  ADD_SUBDIRECTORY(${MYNAME_FOLDER})
  
  unset(MYNAME_FOLDER)