CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
  

unset(OPTCONTROL_FOLDER)
set(OPTCONTROL_FOLDER OptimalControl/)

# MHD Optimal Control
  set(OPT_APPLICATION 05_mhdopt)
  ADD_SUBDIRECTORY(${OPT_APPLICATION}/)
  FILE(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/applications/${OPTCONTROL_FOLDER}/${OPT_APPLICATION}/input/)
  FILE(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/applications/${OPTCONTROL_FOLDER}/${OPT_APPLICATION}/output/)
  FILE(COPY ${OPT_APPLICATION}/input/ DESTINATION ${PROJECT_BINARY_DIR}/applications/${OPTCONTROL_FOLDER}/${OPT_APPLICATION}/input/)

# Temperature Optimal Control
  set(OPT_APPLICATION 02_tempopt)
  ADD_SUBDIRECTORY(${OPT_APPLICATION}/)
  FILE(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/applications/${OPTCONTROL_FOLDER}/${OPT_APPLICATION}/input/)
  FILE(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/applications/${OPTCONTROL_FOLDER}/${OPT_APPLICATION}/output/)
  FILE(COPY ${OPT_APPLICATION}/input/ DESTINATION ${PROJECT_BINARY_DIR}/applications/${OPTCONTROL_FOLDER}/${OPT_APPLICATION}/input/)

# FE test
  set(OPT_APPLICATION 99_fe_test)
  ADD_SUBDIRECTORY(${OPT_APPLICATION}/)
  FILE(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/applications/${OPTCONTROL_FOLDER}/${OPT_APPLICATION}/input/)
  FILE(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/applications/${OPTCONTROL_FOLDER}/${OPT_APPLICATION}/output/)
  FILE(COPY ${OPT_APPLICATION}/input/ DESTINATION ${PROJECT_BINARY_DIR}/applications/${OPTCONTROL_FOLDER}/${OPT_APPLICATION}/input/)

  
  ADD_SUBDIRECTORY(./00_laplacian_all_dims/)
  ADD_SUBDIRECTORY(./00_laplacian_all_dims_neu/)
  ADD_SUBDIRECTORY(./01_boundary_control_inequality/)
  ADD_SUBDIRECTORY(./01_distributed_control_elliptic_nonlin/)
  ADD_SUBDIRECTORY(./03_nsopt/)
  ADD_SUBDIRECTORY(./04_solidopt/)
  ADD_SUBDIRECTORY(./05_mhd/)
  ADD_SUBDIRECTORY(./07_fractional/)
  ADD_SUBDIRECTORY(./08_bonito/)
  ADD_SUBDIRECTORY(./08_bonito2/)
  
