CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(Poisson_AMR)

# Build the executable
ADD_EXECUTABLE(Poisson_AMR ${CMAKE_PROJECT_DIR}main.cpp)

# Link the executable to the petsc anf femttu libs
TARGET_LINK_LIBRARIES(Poisson_AMR femus)
TARGET_LINK_LIBRARIES(Poisson_AMR ${PETSC_LIBRARIES})
TARGET_LINK_LIBRARIES(Poisson_AMR b64)
TARGET_LINK_LIBRARIES(Poisson_AMR jsoncpp)
TARGET_LINK_LIBRARIES(Poisson_AMR adept)


IF(FPARSER_FOUND)
  TARGET_LINK_LIBRARIES(Poisson_AMR ${FPARSER_LIBRARY})
ENDIF(FPARSER_FOUND)

IF(MPI_FOUND)
  TARGET_LINK_LIBRARIES(Poisson_AMR ${MPI_EXTRA_LIBRARY})
ENDIF(MPI_FOUND)